# movies-api

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  gunicorn-cfg.py  local.env  manage.py  mypy.ini  pyproject.toml  setup.cfg
docker/local/django/: Dockerfile  start
docker/production/django/: Dockerfile  start
movies_api/: asgi.py  urls.py  wsgi.py
movies_api/apps/: conftest.py
movies_api/apps/authentication/: apps.py
movies_api/apps/authentication/tests/: test_auth_api.py
movies_api/apps/core/: apps.py  models.py  urls.py  views.py
movies_api/apps/movies/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
movies_api/apps/movies/data_provider_client/: __init__.py  client.py  errors.py
movies_api/apps/movies/data_provider_client/api/default/: get_movies_movies_get.py
movies_api/apps/movies/data_provider_client/models/: __init__.py  movie.py  paginated_movies.py
movies_api/apps/movies/migrations/: 0001_initial.py  0002_initial.py
movies_api/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
movies_api/apps/users/migrations/: 0001_initial.py
movies_api/settings/: base.py  local.py  production.py
